--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "metro-core": "^0.80.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.8.0",
-    "react-native-svg": "^14.1.0",
+    "react-native": "0.72.10",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
