--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "build": "eas build -p android --profile preview",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
